name:                shelter-rota
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shelter-rota#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      server/src
  exposed-modules:     Types
                     , Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
  default-language:    Haskell2010

executable shelter-rota
  hs-source-dirs:      server/app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , shelter-rota
                     , servant
                     , servant-server
                     , servant-purescript
                     , warp
                     , wai
                     , aeson
                     , transformers
  default-language:    Haskell2010

executable bridge
  hs-source-dirs:      server/bridge
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , purescript-bridge
                     , shelter-rota
                     , servant
                     , servant-purescript
                     , servant-subscriber
                     , text
                     , containers
                     , aeson
                     , lens
  default-language:    Haskell2010

test-suite shelter-rota-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
  main-is:             Spec.hs
  build-depends:       base
                     , shelter-rota
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/shelter-rota
